--- a/src/lib/components/LanguageBtn.module.scss
+++ b/src/lib/components/LanguageBtn.module.scss
@@ -2,16 +2,14 @@
   position: relative;
 
   .lang__btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: 0.3rem 0.8rem;
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--primary);
+    border: 1px solid var(--primary);
+    border-radius: 5px;
   }
 
-  .lang__btn__ar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
   .lang__menu {
     display: none;
     position: absolute;
