--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -70,6 +70,24 @@ del {
   color: var(--normal);
 }
 
+.show__all {
+  width: fit-content;
+  margin-inline: auto;
+  border: 1px solid var(--primary);
+  border-radius: 2rem;
+  padding: 0.1rem 1rem;
+  color: var(--primary);
+  transition: all 0.3s ease;
+  display: block;
+  width: 10rem;
+  text-align: center;
+
+  &:hover {
+    background-color: var(--primary);
+    color: #fff;
+  }
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -334,7 +352,7 @@ input[type="number"] {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 350px;
+  height: 360px;
 
   .product__card {
     display: flex;
@@ -377,36 +395,13 @@ input[type="number"] {
       .product__desc {
         color: rgb(164, 163, 163);
         text-overflow: ellipsis;
-        height: 50px;
-        margin-bottom: 1rem;
+        height: 40px;
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 2;
         overflow: hidden;
-        max-height: 2.8em;
-        line-height: 1.4em;
+        line-height: 1.3;
         font-size: 0.9rem;
-      }
-
-      .show__all {
-        width: fit-content;
-        margin-inline: auto;
-
-        a {
-          border: 1px solid var(--primary);
-          border-radius: 2rem;
-          padding: 0.3rem 1rem;
-          color: var(--primary);
-          transition: all 0.3s ease;
-          display: block;
-          width: 10rem;
-          text-align: center;
-
-          &:hover {
-            background-color: var(--primary);
-            color: #fff;
-          }
-        }
       }
 
       .product__price {
