Adding Cats & Prods & Banners Images

--- a/src/lib/components/client/home/TopSellingProducts.module.scss
+++ b/src/lib/components/client/home/TopSellingProducts.module.scss
@@ -1,6 +1,6 @@
 .top__products {
   margin-inline: auto;
-  background-color: #f4f4f4;
+  background-color: var(--secondary-color);
   padding-block: 1.5rem;
 
   .top__container {
