--- a/src/lib/components/client/layout/Footer.module.scss
+++ b/src/lib/components/client/layout/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   margin-top: 2rem;
   width: 100%;
-  background-color: #f4f4f4;
+  background-color: var(--secondary-color);
   background-color: #30383e;
 
   .footer__container {
