--- a/src/lib/components/client/home/BrandSection.module.scss
+++ b/src/lib/components/client/home/BrandSection.module.scss
@@ -1,21 +1,24 @@
-.offer__section {
+.brand__section {
   width: 100%;
   overflow: hidden;
   max-width: 1300px;
   margin-inline: auto;
-  padding: 1rem;
+  height: 600px !important;
+  border: 1px solid #00000030;
+  border-radius: 1rem;
+  margin-block: 1rem;
 
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center;
+    object-position: top;
     border-radius: 0.3rem;
   }
 }
 
 @media (min-width: 1200px) {
-  .offer__section {
+  .brand__section {
     height: auto;
 
     img {
