--- a/src/lib/components/client/home/NewProducts.module.scss
+++ b/src/lib/components/client/home/NewProducts.module.scss
@@ -1,6 +1,7 @@
 .new__products {
   margin-inline: auto;
   padding-block: 1.5rem;
+  background-color: #f4f4f4;
 
   .new__container {
     max-width: 1300px;
