--- a/src/lib/components/client/home/OfferSection.module.scss
+++ b/src/lib/components/client/home/OfferSection.module.scss
@@ -4,6 +4,10 @@
   max-width: 1300px;
   margin-top: 1rem;
   margin-inline: auto;
+  height: 600px !important;
+  border: 1px solid #00000030;
+  border-radius: 1rem;
+  margin-block: 1rem;
 
   a {
     display: block;
