--- a/src/lib/components/client/layout/Sidebar.module.scss
+++ b/src/lib/components/client/layout/Sidebar.module.scss
@@ -145,7 +145,7 @@
             position: static;
             max-height: 0;
             transition: max-height 0.4s;
-            background-color: #f4f4f4;
+            background-color: var(--secondary-color);
             box-shadow: inset 0 0 10px #00000050;
 
             ul {
