--- a/src/styles/client/ProductSlug.module.scss
+++ b/src/styles/client/ProductSlug.module.scss
@@ -107,7 +107,7 @@
           align-items: center;
           justify-content: center;
           font-size: 0.9rem;
-          border: 1px solid #f4f4f4;
+          border: 1px solid var(--secondary-color);
           border-radius: 2rem;
           color: #909090;
           padding: 0.5rem 0.8rem;
@@ -165,7 +165,7 @@
 
           .add__btn {
             background-color: var(--primary);
-            color: #f4f4f4;
+            color: var(--secondary-color);
           }
         }
       }
